fix: css align

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ a {
   justify-content: center;
   align-items: center;
   font-size: 100px;
-  height: 80px;
+  height: 100px;
 }
 
 .plusTime, .lessTime, .timer{
